# monorepo-api

./: .gitignore  .mypy.ini  .ruff.toml  requirements.txt
.github/scripts/: bump-version  find-nearest-lower-version  release-update  versioning
.github/workflows/: pr-check.yml  pr-create.yml  publish-package.yml  release-discovery.yml  release_discovery.yml
inventory/python/: README.md  RELEASE.md  docker-compose.yml  pyproject.toml
inventory/python/frinx/services/inventory/api/: model.py
inventory/python/frinx_api/inventory/: __init__.py
resource-manager/python/: README.md  RELEASE.md  docker-compose.yml  pyproject.toml
resource-manager/python/api/: model.py
resource-manager/python/frinx/services/resource_manager/api/: model.py
resource-manager/python/frinx_api/resource_manager/: __init__.py
schellar/python/: README.md  RELEASE.md  docker-compose.yml  pyproject.toml
schellar/python/frinx/services/schellar/api/: model.py
schellar/python/frinx_api/schellar/: __init__.py
topology-discovery/python/: README.md  RELEASE.md  docker-compose.yml  pyproject.toml
topology-discovery/python/api/: model.py
topology-discovery/python/frinx/services/topology_discovery/api/: model.py
topology-discovery/python/frinx_api/topology_discovery/: __init__.py
uniconfig/python/: CHANGELOG.md  Dockerfile  README.md  RELEASE.md  docker-compose.yml  generate.sh  pyproject.toml
uniconfig/python/api/cli/translate/: __init__.py
uniconfig/python/api/cli/unit/generic/: executeandread.py
uniconfig/python/api/connection/manager/: checkinstallednodes.py  installmultiplenodes.py  installnode.py  uninstallmultiplenodes.py
uniconfig/python/api/data/change/events/: createdatachangesubscription.py  deletedatachangesubscription.py
uniconfig/python/api/device/discovery/: discover.py
uniconfig/python/api/dryrun/manager/: dryruncommit.py
uniconfig/python/api/journal/: readjournal.py
uniconfig/python/api/netconf/keystore/: addprivatekey.py
uniconfig/python/api/restconf/logging/: __init__.py  sethiddenhttpheaders.py  sethiddenhttpmethods.py
uniconfig/python/api/schema/resources/: registerrepository.py
uniconfig/python/api/snapshot/manager/: createsnapshot.py  deletesnapshot.py  replaceconfigwithsnapshot.py  snapshotsmetadata.py
uniconfig/python/api/subtree/manager/: __init__.py  calculatesubtreediff.py  copyonetoone.py
uniconfig/python/api/template/manager/: gettemplateinfo.py  gettemplatenodes.py  upgradetemplate.py
uniconfig/python/api/uniconfig/manager/: __init__.py  calculatediff.py  checkedcommit.py  replaceconfigwithoperational.py  syncfromnetwork.py  synctonetwork.py
uniconfig/python/frinx/services/uniconfig/api/: __init__.py
uniconfig/python/frinx/services/uniconfig/api/cli/: __init__.py  topology.py
uniconfig/python/frinx/services/uniconfig/api/cli/unit/generic/: executeandreaduntil.py
uniconfig/python/frinx/services/uniconfig/api/connection/manager/: __init__.py  changeadminstate.py  dryrununmountnode.py
uniconfig/python/frinx/services/uniconfig/api/netconf/keystore/: addkeystoreentry.py  removekeystoreentry.py
uniconfig/python/frinx/services/uniconfig/api/subtree/manager/: bulkedit.py  copymanytoone.py
uniconfig/python/frinx/services/uniconfig/api/template/manager/: createmultipletemplates.py
uniconfig/python/frinx/services/uniconfig/api/transaction/log/: revertchanges.py
uniconfig/python/frinx/services/uniconfig/api/uniconfig/: config.py
uniconfig/python/frinx/services/uniconfig/api/uniconfig/manager/: commit.py  validate.py
uniconfig/python/frinx_api/uniconfig/: rest_api.py
uniconfig/python/frinx_api/uniconfig/cli/translate/: registry.py
uniconfig/python/frinx_api/uniconfig/cli/unit/generic/: configcoverage.py  execute.py
uniconfig/python/frinx_api/uniconfig/connection/manager/: getinstallednodes.py
uniconfig/python/frinx_api/uniconfig/crypto/: changeencryptionstatus.py
uniconfig/python/frinx_api/uniconfig/data/change/events/: __init__.py  showsubscriptiondata.py
uniconfig/python/frinx_api/uniconfig/frinx/: types.py
uniconfig/python/frinx_api/uniconfig/logging/: __init__.py  disabledevicelogging.py  enabledefaultdevicelogging.py  setglobalhiddentypes.py
uniconfig/python/frinx_api/uniconfig/netconf/keystore/: addtrustedcertificate.py  removetrustedcertificate.py
uniconfig/python/frinx_api/uniconfig/netconf/node/: topology.py
uniconfig/python/frinx_api/uniconfig/notifications/: createsubscription.py
uniconfig/python/frinx_api/uniconfig/schema/resources/: __init__.py
uniconfig/python/frinx_api/uniconfig/subtree/manager/: calculatesubtreegitlikediff.py  copyonetomany.py
uniconfig/python/frinx_api/uniconfig/template/manager/: __init__.py  applytemplate.py
uniconfig/python/frinx_api/uniconfig/uniconfig/manager/: calculategitlikediff.py  compareconfig.py  health.py  isinsync.py
uniconfig/python/frinx_api/uniconfig/uniconfig/query/: queryconfig.py
utils/graphql-pydantic-converter/: Dockerfile  README.md  pyproject.toml
utils/graphql-pydantic-converter/graphql_pydantic_converter/: __main__.py  schema_converter.py
