[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.263"
mypy = "^1.3.0"
pyright = "^1.1.317"


[tool.poetry]
packages = [{ include = "api" }]

name = "frinx-topology-discovery-api"
description = "Frinx Topology Discovery graphql schema transformed to pydantic basemodels"
authors = ["Jozef Volak <jozef.volak@elisapolystar.com>"]
version = "0"
readme = ["README.md", "CHANGELOG.md"]
keywords = ["frinx-machine", "topology-discovery", "api"]
license = "Apache 2.0"

[project.urls]
Homepage = 'https://github.com/FRINXio/frinx-python-sdk'
Source = 'https://github.com/FRINXio/frinx-python-sdk'


