[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "1.10.7"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.10.0"
ruff = "^0.0.263"
coverage = "^7.2.3"
mypy = "^1.3.0"
pyright = "^1.1.317"

[tool.poetry]
packages = [{ include = "graphql_pydantic_converter" }]
name = "graphql-pydantic-transformer"
description = "Convert pydantic schema to pydantic datamodel and build request from it"
authors = ["Jozef Volak <jozef.volak@elisapolystar.com>"]
version = '0.0.1'
readme = ["README.md", "CHANGELOG.md", "RELEASE.md"]
keywords = ["graphql", "pydantic"]
license = "Apache 2.0"

[tool.poetry.scripts]
graphql-pydantic-converter = "graphql_pydantic_converter.__main__:main"